# tap-google-sheets

./: LICENSE  README.md  meltano.yml  pyproject.toml
.github/workflows/: test.yml
tap_google_sheets/: __init__.py  client.py  streams.py  tap.py
tests/: test_core.py
