[tool.poetry]
name = "tap-google-sheets"
version = "0.0.1"
description = "`tap-google-sheets` is a Singer tap for GoogleSheets, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Hunter Kuffel <hunter.kuffel@voxmedia.com>"]
keywords = [
    "ELT",
    "GoogleSheets",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
singer-sdk = { version="^0.32.0b2" }
fs-s3fs = { version = "^1.1.1", optional = true }
requests = "^2.31.0"
gspread = "^5.11.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
singer-sdk = { version="^0.32.0b2", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["tap_google_sheets"]
target-version = "py37"


[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_google_sheets"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-google-sheets = 'tap_google_sheets.tap:TapGoogleSheets.cli'
